@@ -1,3 +1,8 @@
+2011-11-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* cassette.c: Fix segfault when the -tape parameter points to a nonexistent
+  file.
+
+
 2011-11-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * atari_falcon.c, sound_falcon.c, falcon/sound_dma.S: Fix Falcon compilation
   errors with MiNTLib 0.59.1 and GCC 4.6.2 (still works with GCC 2.95.3 as
